--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Fancy Pony — Direct Form Upload</title>
-<form method="post"
-      enctype="multipart/form-data"
+<form method="post" enctype="multipart/form-data"
       action="https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec">
   <label>Your Name <input name="name" required></label><br><br>
   <label>Choose File (JPG/PNG/PDF)
