--- a/index.html
+++ b/index.html
@@ -1,102 +1,233 @@
 <!doctype html>
-<meta charset="utf-8" />
-<title>Fancy Pony — Uploader</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Fancy Pony — Art Submission</title>
 <style>
-  :root { color-scheme: light; }
-  body { font-family: Arial, sans-serif; margin: 2rem; background:#fafafa; }
-  h1 { margin: 0 0 1rem; }
-  .card { background:#fff; border-radius:12px; padding:16px; box-shadow:0 4px 18px rgba(0,0,0,.06); max-width:880px; }
-  label { display:block; margin:.6rem 0 .25rem; font-weight:600; }
-  input[type="text"], input[type="file"] {
-    width:100%; padding:.6rem .7rem; border:1px solid #d1d5db; border-radius:10px; font-size:14px; background:#fff;
+  :root { color-scheme: light; --accent:#2563eb; --accent-d:#1e40af; }
+  *{box-sizing:border-box}
+  body{margin:0; font:16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, Noto Sans, "Apple Color Emoji","Segoe UI Emoji";}
+  .wrap{max-width:880px; margin:40px auto; padding:0 18px;}
+  h1{font-size:clamp(28px,4vw,42px); margin:0 0 8px;}
+  .muted{color:#6b7280}
+  .card{background:#fff; border-radius:14px; padding:18px; box-shadow:0 6px 24px rgba(0,0,0,.06)}
+  label{display:block; font-weight:600; margin:.35rem 0 .25rem}
+  input[type="text"], input[type="email"], input[type="file"], textarea{
+    width:100%; padding:.7rem .8rem; border:1px solid #d1d5db; border-radius:10px; font-size:16px; background:#fff;
   }
-  .row { display:grid; grid-template-columns:1fr 1fr; gap:12px; }
-  .btn { margin-top:14px; padding:.7rem 1.1rem; background:#2563eb; color:#fff; border:0; border-radius:10px; cursor:pointer; font-weight:700; }
-  .btn:hover { filter:brightness(1.05); }
-  .muted { color:#6b7280; font-size:12px; margin-top:8px; }
-  #status { margin-top:12px; white-space:pre-wrap; }
-  .ok { color:#065f46; background:#ecfdf5; border:1px solid #a7f3d0; padding:10px 12px; border-radius:8px; display:inline-block; }
-  .err { color:#991b1b; background:#fff1f2; border:1px solid #fecaca; padding:10px 12px; border-radius:8px; display:inline-block; }
+  textarea{resize:vertical}
+  .grid{display:grid; gap:12px}
+  @media(min-width:640px){ .grid-2{grid-template-columns:1fr 1fr} }
+  .row{margin:.4rem 0}
+  .checkline{display:flex; gap:.6rem; align-items:flex-start; margin-top:.6rem}
+  .checkline input{margin-top:.2rem}
+  .help{font-size:13px; color:#6b7280; margin-top:.4rem}
+  .note{font-size:13px; color:#111827; margin-top:.35rem}
+  .error{background:#fff1f2; color:#991b1b; border:1px solid #fecaca; padding:10px 12px; border-radius:10px; margin-top:12px}
+  .ok{background:#f0fff4; color:#065f46; border:1px solid #bbf7d0; padding:10px 12px; border-radius:10px; margin-top:12px}
+
+  .btn{display:inline-flex; align-items:center; gap:.5rem; border:0; color:#fff; background:var(--accent);
+       padding:.75rem 1.15rem; border-radius:12px; font-weight:700; cursor:pointer; transition:transform .02s, filter .15s}
+  .btn:hover{filter:brightness(1.05)}
+  .btn:disabled{opacity:.6; cursor:not-allowed}
+  .dots{display:inline-flex; gap:6px}
+  .dots i{width:6px; height:6px; border-radius:50%; background:#fff; display:inline-block; animation:bounce 1s infinite}
+  .dots i:nth-child(2){animation-delay:.12s}
+  .dots i:nth-child(3){animation-delay:.24s}
+  @keyframes bounce{0%,80%,100%{opacity:.2; transform:translateY(0)}40%{opacity:1; transform:translateY(-6px)}}
+
+  .meta{margin-top:14px; color:#6b7280; font-size:14px}
+  .count-badge{display:inline-block; background:#eef2ff; color:#3730a3; border:1px solid #c7d2fe; border-radius:999px; padding:.2rem .6rem; font-weight:700}
+
+  /* Gallery */
+  h2{margin:30px 0 12px}
+  .gallery{display:grid; grid-template-columns:repeat(auto-fill,minmax(160px,1fr)); gap:14px}
+  .item{background:#fff; border:1px solid #e5e7eb; border-radius:12px; overflow:hidden; box-shadow:0 3px 12px rgba(0,0,0,.04)}
+  .item a{display:block}
+  .thumb{width:100%; height:140px; object-fit:cover; display:block; background:#f3f4f6}
+  .cap{padding:8px 10px; font-size:13px; color:#374151}
+  .cap b{display:block; color:#111827}
+  .empty{color:#6b7280; font-size:14px; padding:14px 10px}
 </style>
+</head>
+<body>
+<div class="wrap">
+  <h1>Fancy Pony — Art Submission</h1>
+  <p class="muted">Upload your drawing and help grow our gallery. Files should be <b>JPG/PNG/PDF</b>, scanned at <b>150–300&nbsp;ppi</b>, and between <b>1–3&nbsp;MB</b>.</p>
 
-<h1>Fancy Pony — Minimal Upload</h1>
+  <div class="card">
+    <form id="uploadForm" novalidate>
+      <div class="grid grid-2">
+        <div class="row">
+          <label for="name">Your Name</label>
+          <input id="name" name="name" type="text" placeholder="e.g. Alex Chen" required>
+        </div>
+        <div class="row">
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" placeholder="you@example.com" required>
+        </div>
+      </div>
 
-<div class="card">
-  <form id="f" onsubmit="return false;">
-    <label for="name">Your Name</label>
-    <input id="name" type="text" placeholder="e.g. Alex Chen" required>
+      <div class="row">
+        <label for="title">Pony Name</label>
+        <input id="title" name="title" type="text" placeholder="e.g. Starlight Runner" required>
+      </div>
 
-    <label for="file">Choose File (JPG / PNG / PDF)</label>
-    <input id="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
+      <div class="row">
+        <label for="file">Choose File (JPG / PNG / PDF)</label>
+        <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
+        <div id="fileNote" class="help">Tip: aim for 150–300 ppi. We’ll check your file is between 1–3&nbsp;MB.</div>
+      </div>
 
-    <button id="btn" class="btn">Upload</button>
-    <div class="muted">Tip: scan at 150–300 ppi before uploading.</div>
-  </form>
+      <div class="checkline">
+        <input id="consent" name="consent" type="checkbox" required>
+        <label for="consent" class="muted" style="margin:0;">
+          I grant the school Marketing the right to print, publicly display, and use my artwork for promotional purposes.
+        </label>
+      </div>
 
-  <div id="status"></div>
+      <div class="row">
+        <button id="submitBtn" class="btn" type="submit">
+          <span class="btn-text">Submit</span>
+          <span class="btn-spin" style="display:none"><span class="dots"><i></i><i></i><i></i></span></span>
+        </button>
+      </div>
+
+      <div id="status"></div>
+      <div class="meta">
+        Total submissions: <span id="count" class="count-badge">—</span>
+      </div>
+    </form>
+  </div>
+
+  <h2>Submitted Fancy Ponies</h2>
+  <div id="gallery" class="gallery">
+    <div class="empty">Loading…</div>
+  </div>
 </div>
 
 <script>
-  // TODO: 換成你的 Web App /exec
+  // Replace with your latest Web App URL if needed:
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec';
 
   const $ = id => document.getElementById(id);
-  $('btn').addEventListener('click', upload);
+  const MIN = 1 * 1024 * 1024;   // 1 MB
+  const MAX = 3 * 1024 * 1024;   // 3 MB
 
-  function fileToBase64(file){
-    return new Promise((resolve, reject)=>{
-      const fr = new FileReader();
-      fr.onload = () => {
-        const s = String(fr.result || '');
-        const i = s.indexOf('base64,');
-        resolve(i >= 0 ? s.slice(i + 7) : s);
-      };
-      fr.onerror = () => reject(fr.error || new Error('read error'));
-      fr.readAsDataURL(file);
-    });
+  const btn = $('submitBtn');
+  const btnText = btn.querySelector('.btn-text');
+  const btnSpin = btn.querySelector('.btn-spin');
+
+  function setBusy(v){
+    btn.disabled = v;
+    btnText.style.display = v ? 'none' : '';
+    btnSpin.style.display = v ? '' : 'none';
   }
 
-  async function upload(){
-    const status = $('status');
-    const file = $('file').files[0];
-    if (!file){ status.innerHTML = '<span class="err">Please choose a file.</span>'; return; }
+  function updateFileNote(){
+    const f = $('file').files[0];
+    const n = $('fileNote');
+    if (!f){ n.textContent = 'Tip: aim for 150–300 ppi. We’ll check your file is between 1–3 MB.'; return; }
+    const sz = (f.size/1024/1024).toFixed(2);
+    n.textContent = `Selected: ${sz} MB (required 1–3 MB)`;
+  }
 
-    // 可選：簡單大小限制（Apps Script 約 50MB）
-    if (file.size > 45 * 1024 * 1024){
-      status.innerHTML = '<span class="err">File is too large. Please keep it under ~45MB.</span>';
+  $('file').addEventListener('change', updateFileNote);
+
+  async function refreshCount(){
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
+      const j = await r.json();
+      $('count').textContent = j.ok ? (j.count ?? 0) : '—';
+    }catch{ $('count').textContent = '—'; }
+  }
+
+  async function refreshGallery(){
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=gallery', {cache:'no-store'});
+      const j = await r.json();
+      const root = $('gallery');
+      root.innerHTML = '';
+      if (!j.ok || !Array.isArray(j.items) || j.items.length===0){
+        root.innerHTML = '<div class="empty">No submissions yet. Be the first!</div>';
+        return;
+      }
+      j.items.forEach(x=>{
+        const name = x.name || '';
+        const title = x.title || 'Untitled';
+        const url = x.fileUrl || '#';
+        const card = document.createElement('div');
+        card.className = 'item';
+        card.innerHTML = `
+          <a href="${url}" target="_blank" rel="noopener">
+            <img class="thumb" src="${url}" alt="${title}">
+          </a>
+          <div class="cap"><b>${title}</b>${name}</div>`;
+        root.appendChild(card);
+      });
+    }catch{
+      $('gallery').innerHTML = '<div class="empty">Could not load gallery.</div>';
+    }
+  }
+
+  $('uploadForm').addEventListener('submit', async (e)=>{
+    e.preventDefault();
+    const status = $('status'); status.textContent = '';
+
+    // Basic validations
+    const name = $('name').value.trim();
+    const email = $('email').value.trim();
+    const title = $('title').value.trim();
+    const file = $('file').files[0];
+    const consent = $('consent').checked;
+
+    if (!name || !email || !title || !file || !consent){
+      status.innerHTML = '<div class="error">Please complete all fields and check the consent box.</div>';
+      return;
+    }
+    if (file.size < MIN || file.size > MAX){
+      status.innerHTML = '<div class="error">File must be between 1–3 MB.</div>';
       return;
     }
 
-    status.textContent = 'Uploading…';
+    // Build FormData (must keep field name 'file')
+    const fd = new FormData();
+    fd.append('name', name);
+    fd.append('email', email);
+    fd.append('title', title);
+    fd.append('consent', consent ? 'true' : 'false');
+    fd.append('file', file, file.name);
 
     try{
-      // 標準路徑：multipart + file 欄位（名稱必須是 "file"）
-      const fd = new FormData();
-      fd.append('name', $('name').value.trim());
-      fd.append('file', file, file.name);
-
-      // 備援：同時送 base64（後端如 e.files 為空，仍可用這組資料寫檔）
-      fd.append('filename', file.name);
-      fd.append('mimetype', file.type || 'application/octet-stream');
-      fd.append('filebase64', await fileToBase64(file));
-
-      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // 不要自訂 headers
+      setBusy(true);
+      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
       const txt = await r.text();
-      let data; try { data = JSON.parse(txt); } catch { throw new Error('Non-JSON: ' + txt); }
-      console.log('server response:', data);
+      let data;
+      try { data = JSON.parse(txt); } catch(e){ throw new Error('Server returned non‑JSON response'); }
 
       if (data.ok){
-        const link = data.fileUrl ? ` • <a href="${data.fileUrl}" target="_blank" rel="noopener">Open</a>` : '';
-        status.innerHTML = `<span class="ok">Uploaded.${link}</span>`;
-        $('f').reset();
+        status.innerHTML = `<div class="ok">You have successfully uploaded. <a href="${data.fileUrl}" target="_blank" rel="noopener">Open</a></div>`;
+        e.target.reset();
+        updateFileNote();
+        await refreshCount();
+        await refreshGallery();
       } else {
-        status.innerHTML = `<span class="err">Failed: ${data.error || 'Unknown error'}</span>` +
-          (data.diag ? '<pre class="muted">'+JSON.stringify(data.diag,null,2)+'</pre>' : '');
+        const diag = data.diag ? `<pre class="muted" style="white-space:pre-wrap;margin-top:.35rem;">${JSON.stringify(data.diag,null,2)}</pre>` : '';
+        status.innerHTML = `<div class="error">Upload failed: ${data.error || 'Unknown error'}</div>${diag}`;
       }
     }catch(err){
-      status.innerHTML = `<span class="err">Error: ${err.message}</span>`;
+      status.innerHTML = `<div class="error">Error: ${err.message}</div>`;
       console.error(err);
+    }finally{
+      setBusy(false);
     }
-  }
+  });
+
+  // Initial load
+  updateFileNote();
+  refreshCount();
+  refreshGallery();
 </script>
+</body>
+</html>
